logs/dag_id=daily_copy_schema_optimized_with_cache/run_id=manual__2024-07-20T16:50:36.785270+00:00/task_id=copy_all_tables/attempt=1.log
[2024-07-20T16:50:42.591+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-20T16:50:42.606+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: daily_copy_schema_optimized_with_cache.copy_all_tables manual__2024-07-20T16:50:36.785270+00:00 [queued]>
[2024-07-20T16:50:42.610+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: daily_copy_schema_optimized_with_cache.copy_all_tables manual__2024-07-20T16:50:36.785270+00:00 [queued]>
[2024-07-20T16:50:42.610+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-07-20T16:50:42.616+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): copy_all_tables> on 2024-07-20 16:50:36.785270+00:00
[2024-07-20T16:50:42.622+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=232) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-20T16:50:42.623+0000] {standard_task_runner.py:63} INFO - Started process 234 to run task
[2024-07-20T16:50:42.623+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'daily_copy_schema_optimized_with_cache', 'copy_all_tables', 'manual__2024-07-20T16:50:36.785270+00:00', '--job-id', '170', '--raw', '--subdir', 'DAGS_FOLDER/update_ods.py', '--cfg-path', '/tmp/tmpd0qb1v6y']
[2024-07-20T16:50:42.625+0000] {standard_task_runner.py:91} INFO - Job 170: Subtask copy_all_tables
[2024-07-20T16:50:42.658+0000] {task_command.py:426} INFO - Running <TaskInstance: daily_copy_schema_optimized_with_cache.copy_all_tables manual__2024-07-20T16:50:36.785270+00:00 [running]> on host 89202c950a25
[2024-07-20T16:50:42.690+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='daily_copy_schema_optimized_with_cache' AIRFLOW_CTX_TASK_ID='copy_all_tables' AIRFLOW_CTX_EXECUTION_DATE='2024-07-20T16:50:36.785270+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-20T16:50:36.785270+00:00'
[2024-07-20T16:50:42.691+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-20T16:50:42.695+0000] {base.py:84} INFO - Using connection ID 'source_db' for task execution.
[2024-07-20T16:50:42.813+0000] {base.py:84} INFO - Using connection ID 'target_db' for task execution.
[2024-07-20T16:50:43.043+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-20T16:50:43.044+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/update_ods.py", line 65, in copy_all_tables
    target_cursor.executemany(insert_query, rows)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: ",")
LINE 1: ...ds_data.уровни_знаний (название, активность, Сорт., Дата изм...
                                                             ^

[2024-07-20T16:50:43.058+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=daily_copy_schema_optimized_with_cache, task_id=copy_all_tables, run_id=manual__2024-07-20T16:50:36.785270+00:00, execution_date=20240720T165036, start_date=20240720T165042, end_date=20240720T165043
[2024-07-20T16:50:43.069+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 170 for task copy_all_tables (ОШИБКА:  ошибка синтаксиса (примерное положение: ",")
LINE 1: ...ds_data.уровни_знаний (название, активность, Сорт., Дата изм...
                                                             ^
; 234)
[2024-07-20T16:50:43.096+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-20T16:50:43.106+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-20T16:50:43.106+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
